--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -14,7 +14,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+.idea/
 *.iws
 *.iml
 *.ipr
@@ -31,3 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Logs & OS files ###
+*.log
+*.DS_Store
+Thumbs.db
